SCSS  da Navbar

--- a/lib/src/index.scss
+++ b/lib/src/index.scss
@@ -1,3 +1,29 @@
+// Fonts
+
+.roboto-regular {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.roboto-medium {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  font-style: normal;
+}
+
+.roboto-bold {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.roboto-black {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 900;
+  font-style: normal;
+}
+
 // Standard and global reset and normalization
 * {
   box-sizing: border-box;
@@ -20,5 +46,3 @@ html {
     font-size: 45%;
   }
 }
-
-// Bootstrap underwritten variables
