--- a/lib/src/components/Navbar/Navbar.scss
+++ b/lib/src/components/Navbar/Navbar.scss
@@ -2,12 +2,23 @@ img {
   height: 7.5rem;
 }
 
-.li-custom {
-  padding: 0 2rem;
+nav {
+  background-color: #0f222d;
+}
 
-  a {
-    font-size: 1.6rem;
-    color: #fff;
-    font-weight: 400;
-  }
+.nav-item {
+  padding: 2rem;
+}
+
+.nav-link {
+  transition: color 0.3s, font-size 0.3s; /* Adicionando transição para mudanças de cor e tamanho de fonte */
+  font-size: 1.6rem;
+  color: #fff5d1;
+  padding: 0;
+}
+
+.nav-link:focus,
+.nav-link:hover {
+  color: white;
+  font-size: 1.8rem;
 }
