--- a/lib/src/components/Footer/Footer.scss
+++ b/lib/src/components/Footer/Footer.scss
@@ -1,5 +1,5 @@
 footer {
-  background-color: rgba(0, 0, 0, 0.85);
+  background-color: #0f222d;
   height: 10vh;
   display: flex;
   align-items: center;
@@ -11,8 +11,13 @@ footer {
     margin: 0;
   }
 
-  img {
-    height: 4rem;
-    margin: 0 1rem;
+  i {
+    font-size: 4rem;
+    color: #fff5d1;
+    transition: color 0.3s, font-size 0.3s;
+  }
+
+  i:hover {
+    font-size: 4.4rem;
   }
 }
