--- a/lib/src/pages/About/About.scss
+++ b/lib/src/pages/About/About.scss
@@ -1,10 +1,48 @@
 .text-box {
-  height: 100vh;
-  background-image: url('../../assets/img/bg.svg');
+  height: 100vh; // Altura total da viewport para desktop
+  background-image: url('../../assets/img/hollowed-boxes.svg');
   background-position: center;
   background-size: cover;
+
+  @media only screen and (max-width: 768px) {
+    // Remover o limite de altura para dispositivos móveis
+    height: auto;
+  }
 }
 
 .text-summary {
-  line-height: 2.5rem;
+  line-height: 3rem;
+  font-size: 1.8rem;
+  color: white;
+
+  @media only screen and (max-width: 768px) {
+    // Para dispositivos móveis e tablets
+    padding-left: 2rem;
+    padding-right: 2rem;
+    font-size: 1.6rem; // Aumenta um pouco o tamanho da fonte
+  }
+
+  @media only screen and (min-width: 769px) and (max-width: 1024px) {
+    // Para tablets
+    padding-left: 4rem;
+    padding-right: 4rem;
+    font-size: 1.8rem; // Aumenta um pouco o tamanho da fonte
+  }
+}
+
+.text-custom {
+  padding-left: 12rem;
+  padding-right: 12rem;
+
+  @media only screen and (max-width: 768px) {
+    // Para dispositivos móveis e tablets
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
+  @media only screen and (min-width: 769px) and (max-width: 1024px) {
+    // Para tablets
+    padding-left: 4rem;
+    padding-right: 4rem;
+  }
 }
