--- a/src/index.scss
+++ b/src/index.scss
@@ -18,10 +18,10 @@
   font-style: normal;
 }
 
-.roboto-black {
+.roboto-medium-italic {
   font-family: 'Roboto', sans-serif;
-  font-weight: 900;
-  font-style: normal;
+  font-weight: 500;
+  font-style: italic;
 }
 
 // Standard and global reset and normalization
