--- a/src/pages/BookDetails/BookDetails.scss
+++ b/src/pages/BookDetails/BookDetails.scss
@@ -1,40 +1,50 @@
+// Estilo para o container principal dos detalhes do livro
 .div-custom-book-detail {
-  background-image: url('../../assets/img/repeating-triangles.svg');
+  background-image: url('../../assets/img/protruding-squares.svg');
+  color: #0f222d;
 }
 
+// Estilo para o container customizado dos detalhes do livro
 .container-custom {
   margin: 12rem 0;
 
+  // Estilo para parágrafos dentro do container customizado
   p {
     width: 36rem;
     font-size: 1.8rem;
   }
 
+  // Estilo para títulos h2 dentro do container customizado
   h2 {
     font-size: 2.6rem;
     margin-bottom: 4rem;
   }
 
+  // Estilo para títulos h3 dentro do container customizado
   h3 {
     font-size: 2rem;
     margin-top: 4rem;
   }
 }
 
+// Estilo para a imagem do livro
 .book-img {
   height: 48rem;
   width: 36rem;
   margin-bottom: 2rem;
 }
 
+// Estilo para as ferramentas do livro (vídeos e PDFs)
 .book-tools {
   display: flex;
 
+  // Estilo para imagens dentro das ferramentas
   img {
     height: 6rem;
   }
 }
 
+// Estilo para as bandeiras indicando o idioma do livro
 .book-flags {
   img {
     height: 4rem;
@@ -42,6 +52,7 @@
   }
 }
 
+// Estilo para o modal de vídeo do livro
 .book-video {
   display: none;
   position: fixed;
@@ -59,6 +70,7 @@
     position: relative;
   }
 
+  // Estilo para o iframe do vídeo dentro do modal
   iframe {
     height: 50rem;
     width: 75rem;
@@ -66,6 +78,7 @@
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
   }
 
+  // Estilo para o botão de fechar o modal
   button {
     position: absolute;
     top: -5rem;
@@ -76,6 +89,7 @@
   }
 }
 
+// Media query para ajustar o tamanho do vídeo em dispositivos móveis
 @media (max-width: 425px) {
   .book-video {
     iframe {
@@ -85,6 +99,7 @@
   }
 }
 
+// Media query para ajustar estilos em tablets
 @media (max-width: 992px) and (min-width: 768px) {
   .book-img {
     height: 42rem;
