--- a/src/pages/Books/Books.scss
+++ b/src/pages/Books/Books.scss
@@ -1,11 +1,14 @@
+// Estilo da tela
 .screen {
-  background-image: url('../../assets/img/vanishing-stripes.svg');
+  background-image: url('../../assets/img/subtle-prism.svg');
   min-height: 100vh;
 
+  // Estilos para o dropdown ativo
   .activeSort {
     background-color: rgb(255, 255, 0);
   }
 
+  // Estilos para a div customizada
   .div-custom {
     display: flex;
     justify-content: center;
@@ -13,38 +16,52 @@
     padding: 2rem;
   }
 
+  // Estilos para o card customizado
   .card-custom {
-    width: 28rem;
-    height: 46rem;
+    width: 30rem;
+    height: 50rem;
     border: solid 0.5rem #fff;
     box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset,
       rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
 
+    // Estilos para a imagem do card
     img {
       max-height: 80%;
-      margin-bottom: 0.8rem;
     }
 
+    // Estilos para o título do card
     h5 {
       font-size: 1.8rem;
+      padding: 0.5rem 0;
+      margin: 0;
     }
 
+    // Estilos para a categoria do card
     h6 {
-      font-size: 1.4rem;
+      font-size: 1.6rem;
+      margin: 0;
     }
 
+    // Estilos para o link do card
     a {
-      background-color: #ffd700;
+      background-color: #ffd900ad;
+      padding: 0.6rem 1.2rem;
       border: none;
-      font-size: 1.2rem;
-      color: rgb(0, 0, 0);
-      box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
-      margin-top: 0.8rem;
+      font-size: 1.4rem;
+      color: rgba(0, 0, 0);
+      margin-top: 1rem;
       font-weight: 600;
+      transition: all 0.3s ease;
+
+      &:hover {
+        background-color: gold;
+        padding: 0.7rem 1.35rem;
+      }
     }
   }
 }
 
+// Estilos para o input de pesquisa
 .input-custom {
   border: 2px solid #ccc;
   border-radius: 5px;
@@ -67,12 +84,20 @@
   }
 }
 
+// Estilos para o botão customizado
 .btn-custom {
   height: 3.6rem;
   width: 10.8rem;
   font-size: 1.2rem;
+
+  // Estilos para a tela de largura máxima de 991px
+  @media only screen and (max-width: 991px) {
+    background-color: #ffd700;
+    color: #000;
+  }
 }
 
+// Estilos para a páginação
 .page-link {
   height: 3.6rem;
   width: 10.8rem;
@@ -80,6 +105,7 @@
   color: black;
 }
 
+// Estilos para mensagem de pesquisa inválida
 .wrong-searched {
   height: 8rem;
   width: 40rem;
@@ -95,13 +121,18 @@
   font-size: 1.4rem;
   color: #fff;
   animation: fadeIn 1s ease;
+
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
 }
 
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
+// Estilos para a navegação da paginação
+.pagination nav {
+  background: none;
 }
