Trocando bg de book-details

--- a/src/pages/BookDetails/BookDetails.scss
+++ b/src/pages/BookDetails/BookDetails.scss
@@ -1,6 +1,6 @@
 // Estilo para o container principal dos detalhes do livro
 .div-custom-book-detail {
-  background-image: url('../../assets/img/protruding-squares.svg');
+  background-image: url('../../assets/img/rose-petals.svg');
   color: #0f222d;
 }
 
